--- a/argocd/apps/frigate/manifests/config.yaml
+++ b/argocd/apps/frigate/manifests/config.yaml
@@ -10,7 +10,7 @@ persistence:
     enabled: true
     storageClass: local-path
     accessMode: ReadWriteOnce
-    size: 1Ti
+    size: 100Gi
 envFromSecrets:
   - frigate-secrets
 coral:
