--- a/argocd/apps/infra/kiali/kustomization.yaml
+++ b/argocd/apps/infra/kiali/kustomization.yaml
@@ -1,8 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-  - vs.yaml
+#resources:
+ # - vs.yaml
 
 helmCharts:
   - name: kiali-operator
@@ -10,4 +10,4 @@ helmCharts:
     version: "2.6.0"
     releaseName: kiali-operator
     namespace: kiali
-    valuesFile: ./config.yaml
+    valuesFile: ./values.yaml
