--- a/argocd/apps/infra/istio/resources/serviceEntry.yaml
+++ b/argocd/apps/infra/istio/resources/serviceEntry.yaml
@@ -25,6 +25,23 @@ spec:
 apiVersion: networking.istio.io/v1alpha3
 kind: ServiceEntry
 metadata:
+  name: agh-se
+  namespace: istio-system
+spec:
+  hosts:
+    - agh.lan
+  endpoints:
+    - address: 192.168.3.1
+  ports:
+    - number: 3000
+      name: agh
+      protocol: HTTP
+  resolution: STATIC
+  location: MESH_EXTERNAL
+---
+apiVersion: networking.istio.io/v1alpha3
+kind: ServiceEntry
+metadata:
   name: homeassistant-se
   namespace: istio-system
 spec:
