--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -47,6 +47,10 @@ spec:
     chart: istiod
     helm:
       valuesObject:
+        meshConfig:
+          ingressControllerMode: DEFAULT
+          ingressClass: istio
+          # ingressSelector: istio-ingressgateway
         affinity:
           nodeAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
@@ -57,14 +61,6 @@ spec:
                       operator: In
                       values:
                         - amd64
-    # global:
-    # istioNamespace: istio-system
-    # logging:
-    #   level: "all:debug"
-    # meshConfig:
-    #   ingressService: istio-gateway
-    #   ingressSelector: gateway
-
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
@@ -96,7 +92,7 @@ spec:
             effect: "NoSchedule"
         autoscaling:
           enabled: true
-          minReplicas: 2
+          minReplicas: 1
           maxReplicas: 4
           targetCPUUtilizationPercentage: 80
         service:
@@ -115,20 +111,16 @@ spec:
               port: 443
               protocol: TCP
               targetPort: 443
-            - name: ollama
-              port: 11434
-              protocol: TCP
-              targetPort: 11434
-        # affinity:
-        #   nodeAffinity:
-        #     preferredDuringSchedulingIgnoredDuringExecution:
-        #       - weight: 1
-        #         preference:
-        #           matchExpressions:
-        #             - key: kubernetes.io/arch
-        #               operator: In
-        #               values:
-        #                 - amd64
+        affinity:
+          nodeAffinity:
+            preferredDuringSchedulingIgnoredDuringExecution:
+              - weight: 1
+                preference:
+                  matchExpressions:
+                    - key: kubernetes.io/arch
+                      operator: In
+                      values:
+                        - amd64
 ---
 apiVersion: argoproj.io/v1alpha1
 kind: Application
