--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -74,7 +74,7 @@ spec:
   http:
     - route:
         - destination:
-            host: router.lan
+            host: agh.lan
             port:
               number: 3000
 ---
