--- a/argocd/apps/resume/manifests/deploy.yaml
+++ b/argocd/apps/resume/manifests/deploy.yaml
@@ -1,11 +1,3 @@
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: resume-config 
-data:
-  DB_DATABASE_NAME: postgres
-  DB_HOSTNAME: postgres
-  DB_USERNAME: postgres
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -13,6 +5,7 @@ metadata:
   name: rx-resume
 spec:
   replicas: 1
+  revisionHistoryLimit: 3
   strategy:
     type: RollingUpdate
     rollingUpdate:
