--- a/argocd/apps/resume/manifests/sts.yaml
+++ b/argocd/apps/resume/manifests/sts.yaml
@@ -62,7 +62,7 @@ spec:
               protocol: TCP
           volumeMounts:
             - name: pgdata
-              mountPath: /var/lib/postgresql/
+              mountPath: /var/lib/postgresql/data/
   volumeClaimTemplates:
     - metadata:
         name: pgdata
