--- a/argocd/apps/infra/istio/app.yaml
+++ b/argocd/apps/infra/istio/app.yaml
@@ -47,9 +47,9 @@ spec:
     chart: istiod
     helm:
       valuesObject:
-        meshConfig:
-          ingressControllerMode: DEFAULT
-          ingressClass: istio
+        # meshConfig:
+        #   ingressControllerMode: DEFAULT
+        #   ingressClass: istio
           # ingressSelector: istio-ingressgateway
         affinity:
           nodeAffinity:
@@ -92,7 +92,7 @@ spec:
             effect: "NoSchedule"
         autoscaling:
           enabled: true
-          minReplicas: 1
+          minReplicas: 2
           maxReplicas: 4
           targetCPUUtilizationPercentage: 80
         service:
