--- a/argocd/apps/minecraft/kustomization.yaml
+++ b/argocd/apps/minecraft/kustomization.yaml
@@ -3,14 +3,14 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - sts.yaml
-  - svc.yaml
-  - vs.yaml
+  - ./manifests/sts.yaml
+  - ./manifests/svc.yaml
+  - ./manifests/vs.yaml
   
 configMapGenerator:
   - name: mc-config
     envs:
-      - cm.yaml
+      - ./manifests/cm.yaml
 
 generators:
-  - secret-generator.yaml
+  - ./manifests/secret-generator.yaml
