use object store for nextcloud

--- a/argocd/apps/nextcloud/manifests/nextcloud-secret.enc.yaml
+++ b/argocd/apps/nextcloud/manifests/nextcloud-secret.enc.yaml
@@ -9,6 +9,10 @@ stringData:
     mariadb-replication-password: ENC[AES256_GCM,data:RPvjxazFUjaNGfsaOlsBbq2t/z4V61okAqj+PJsYBIZqhEouHKzXfcWtUoxJqAZeFslCliZBPgwq80TCF9LGvA==,iv:96B+HsIzo4k64oNieP34XoH+6WJ5P5ZV2A+vL4WAXMU=,tag:u6lefd6EV0QL7JdBgnxvZQ==,type:str]
     mariadb-password: ENC[AES256_GCM,data:45uJaNg=,iv:cahVK0JoYOU6YMT7WBUD95WlMKmKp0yKlJadLfthMus=,tag:zOAGTUPRVn8W1Les7B2QIQ==,type:str]
     db-username: ENC[AES256_GCM,data:Rh12i0+KXvQB,iv:C6Ipx4NVAMJEDKKcZOj0Xyo1iZR9HSMoS1+qxwdGxOE=,tag:yo5YPGbDtFf0J0YF4r0YLA==,type:str]
+    s3-host: ENC[AES256_GCM,data:aTM8ZxaSUTMVFDO+A2poPUB1No2YHoco+w/iGtM=,iv:QGPC3dGyQTHfkpZOdHhnvSG7hN+VuIXzt20G7gH36o8=,tag:dlc8TdSqZ5pdj08p///8/w==,type:str]
+    s3-access-key: ENC[AES256_GCM,data:z42o7O8no/TjKmuh8iEef2WJSeM=,iv:9k1CstuISKBysyzcCefQLxgHK2SbW6MPTcc69be5KW4=,tag:MLy8WUuRvtXraX1nhKxHhg==,type:str]
+    s3-secret-key: ENC[AES256_GCM,data:oxmluRoyaU6VyYgxKZ3QYrw0qzfywu0HFctWEvd3S1pqJ87e0095+g==,iv:8rw1TlTa8vharu68VO2Fsmbgq8FQpPxlDQcN7uIVgKw=,tag:Ko0BLv5SI2Fd/L7rDexW9w==,type:str]
+    s3-bucket: ENC[AES256_GCM,data:MPg28GvuqRvJ,iv:J2d8DnfQoaN+NMNvFOaR1MUKKNur/iWbWTZEgwx5zrc=,tag:EpK+e6DxExQdplW8k94BDA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -24,8 +28,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-03T22:19:15Z"
-    mac: ENC[AES256_GCM,data:1Nl83uJV1nTUYdpHC3NV7bx1ZqM/l3BUfAwtAurqupZn8Xye1WIziM5T3Dzy0IKzdDSHDocd4M3psxEKKMdXkwe0RzpS5gIDvCxHnw+GMEZvTR1nk7c4Ay9JPVqjmGG77gAR6JYSwlGwjxlgY/6J2lYpUaCM4yOBdVyeFgKgFZE=,iv:vaaYiMVi/bWvHc8U9ot8KAFmZ0LinmH2kw4JZ4T0+Vg=,tag:4/C425NTSxQKFmm98flYgw==,type:str]
+    lastmodified: "2025-02-26T03:11:25Z"
+    mac: ENC[AES256_GCM,data:QOWwQxiZ2YuQSVTc3nlbCEBtblhDVh31xI0QItbjcCSnzINVAQNcKE+OSpoSUlplEd3b2M1xME2gZqriPGVzUtesdMg3POlTmqYNfo6QYfjsJ52rZRz258MwW+fgOECTOBo7U8OvzSki/H3/KgmFW3+uYcjBBY3XCK3kzByjEnQ=,iv:O307uccKl0etfqkh/bhW8ASF6JxKIyl6YQxnW/SlMeI=,tag:PpXWAwXs0CRIzJJFCkh86g==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
-    version: 3.9.1
+    version: 3.9.4
