--- a/argocd/apps/nextcloud/values.yaml
+++ b/argocd/apps/nextcloud/values.yaml
@@ -18,20 +18,30 @@ nextcloud:
       value: https://nextcloudk8s.yanello.net
     - name: APACHE_DISABLE_REWRITE_IP
       value: '1'
-  extraVolumes:
-    - name: redis-ini
-      configMap:
-        name: nextcloud-redis-ini
-    - name: remote-ip
-      configMap:
-        name: nextcloud-remote-ip
-  extraVolumeMounts:
-    - name: redis-ini
-      mountPath: /usr/local/etc/php/conf.d/redis.ini
-      subPath: redis-sesion.ini
-    - name: remote-ip
-      mountPath: /etc/apache2/conf-enabled/remote-ip.conf
-      subPath: remoteip.conf
+  objectStore:
+    s3:
+      enabled: true
+      region: "homelab"
+      existingSecret: nextcloud-secrets
+      secretKeys: 
+        host: s3-host
+        accessKey: s3-access-key
+        secretKey: s3-secret-key
+        bucket: s3-bucket
+  # extraVolumes:
+  #   - name: redis-ini
+  #     configMap:
+  #       name: nextcloud-redis-ini
+  #   - name: remote-ip
+  #     configMap:
+  #       name: nextcloud-remote-ip
+  # extraVolumeMounts:
+  #   - name: redis-ini
+  #     mountPath: /usr/local/etc/php/conf.d/redis.ini
+  #     subPath: redis-sesion.ini
+  #   - name: remote-ip
+  #     mountPath: /etc/apache2/conf-enabled/remote-ip.conf
+  #     subPath: remoteip.conf
 cronjob:
   enabled: true
 redis:
@@ -104,7 +114,7 @@ mariadb:
   auth:
     existingSecret: nextcloud-secrets
 persistence:
-  enabled: true
+  enabled: false
   storageClass: local-path
   size: 100Gi
 livenessProbe:
@@ -113,12 +123,12 @@ startupProbe:
   enabled: false
 readinessProbe:
   enabled: false
-affinity:
-  nodeAffinity:
-    requiredDuringSchedulingIgnoredDuringExecution:
-      nodeSelectorTerms:
-        - matchExpressions:
-            - key: kubernetes.io/hostname
-              operator: In
-              values:
-                - marcus-server
+# affinity:
+#   nodeAffinity:
+#     requiredDuringSchedulingIgnoredDuringExecution:
+#       nodeSelectorTerms:
+#         - matchExpressions:
+#             - key: kubernetes.io/hostname
+#               operator: In
+#               values:
+#                 - marcus-server
