--- a/argocd/apps/nextcloud/kustomization.yaml
+++ b/argocd/apps/nextcloud/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 # kubectl exec -it nextcloud -- su -s /bin/sh www-data -c "php"
 resources:
   - ./manifests/vs.yaml
-  - ./cm.yaml
+  - ./manifests/cm.yaml
 
 generators:
   - ./manifests/secret-generator.yaml
@@ -18,6 +18,6 @@ helmCharts:
 
 images:
   - name: nextcloud
-    newTag: 29.0.12
+    newTag: 30.0.6
   - name: docker.io/bitnami/mariadb
     newTag: "10.11@sha256:effbeae0531003615411d7536443604812a8b9f6f8d5bfcc6b6b80848e19759e"
