--- a/argocd/apps/ihatemoney/manifests/sts.yaml
+++ b/argocd/apps/ihatemoney/manifests/sts.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: ihatemoney
+  labels:
+    app: ihatemoney
 spec:
   replicas: 1
   serviceName: ihatemoney
