--- a/argocd/apps/nextcloud/manifests/nextcloud-secret.enc.yaml
+++ b/argocd/apps/nextcloud/manifests/nextcloud-secret.enc.yaml
@@ -13,6 +13,8 @@ stringData:
     s3-access-key: ENC[AES256_GCM,data:z42o7O8no/TjKmuh8iEef2WJSeM=,iv:9k1CstuISKBysyzcCefQLxgHK2SbW6MPTcc69be5KW4=,tag:MLy8WUuRvtXraX1nhKxHhg==,type:str]
     s3-secret-key: ENC[AES256_GCM,data:oxmluRoyaU6VyYgxKZ3QYrw0qzfywu0HFctWEvd3S1pqJ87e0095+g==,iv:8rw1TlTa8vharu68VO2Fsmbgq8FQpPxlDQcN7uIVgKw=,tag:Ko0BLv5SI2Fd/L7rDexW9w==,type:str]
     s3-bucket: ENC[AES256_GCM,data:MPg28GvuqRvJ,iv:J2d8DnfQoaN+NMNvFOaR1MUKKNur/iWbWTZEgwx5zrc=,tag:EpK+e6DxExQdplW8k94BDA==,type:str]
+    NEXTCLOUD_ADMIN_USER: ENC[AES256_GCM,data:GbvF4FnB,iv:YYPkPVs5jr0s5/sE4nFBR0Uo6fwR0JXY2JFMKGBaU0U=,tag:9wbh2Z6pdLH1ybNxCthvnQ==,type:str]
+    NEXTCLOUD_ADMIN_PASSWORD: ENC[AES256_GCM,data:5uQw25o9j0RkK7NI,iv:xPkVskBpv8D+Mr00ZzTrbBCB1f7/VvgN8bmu0y5qGqM=,tag:pwEwkOObJHXjTUxOfmXYnw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -28,8 +30,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-26T03:28:49Z"
-    mac: ENC[AES256_GCM,data:z2W85ZcAmRwc4Jtzt502Ng+vhrv5QMeitmJruaKpAzNImdklK05kyGlncFXARbdFvB65XxvqxRdS/WJ+ew0GcRTbMOO4PKixhzFL0YmRc3EFkwXlBrmOrhynhmOn9rK88q5ojeHh1kt1DuHy3gR1aE1FINWWPfNKE0d2FeQ56SU=,iv:YfYg8nnf9fK9ka7gfRDoE2anUFb8PNBJNXgzjNYSwvA=,tag:o3ItHSipa6g7nSTMkm4P1Q==,type:str]
+    lastmodified: "2025-02-26T14:35:54Z"
+    mac: ENC[AES256_GCM,data:m/KK8xDUdFsF4IATYxNPZZ9ZTXM1YoF3MOZedIUuspxn956oqmn3Vz0zYbOLDqiYeNv5uleSpru5PhrUK2WSxiL3yUr9U9j6j7WO3Mn11bk2S4UOi8zvHK/QdgVLAxztT++pJSFBjHaCOSdVRag8pYY98BlVQ+MKwi60ydZmE0M=,iv:pM1Bx/BSHQUrRxUd/qdoQXuorh+AUu9n81LbXx4NPWc=,tag:0D3tIVLKGqI0EEwSN9vDPg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
