--- a/argocd/apps/nextcloud/values.yaml
+++ b/argocd/apps/nextcloud/values.yaml
@@ -5,6 +5,8 @@ nextcloud:
   existingSecret:
     enabled: true
     secretName: nextcloud-secrets
+    usernameKey: NEXTCLOUD_ADMIN_USER
+    passwordKey: NEXTCLOUD_ADMIN_PASSWORD
   trustedDomains:
     - nextcloudk8s.yanello.net
   extraEnv:
