--- a/argocd/apps/infra/istio/resources/external-vs.yaml
+++ b/argocd/apps/infra/istio/resources/external-vs.yaml
@@ -36,7 +36,7 @@ metadata:
   name: nextcloud-vs
 spec:
   hosts:
-    - nextcloud-old.yanello.net
+    - nextcloud.yanello.net
   gateways:
     - istio-system/kube-gateway
   http:
