--- a/argocd/apps/nextcloud/values.yaml
+++ b/argocd/apps/nextcloud/values.yaml
@@ -1,23 +1,23 @@
 replicaCount: 1
   
 nextcloud:
-  host: nextcloud.yanello.net
+  host: nextcloudk8s.yanello.net
   existingSecret:
     enabled: true
     secretName: nextcloud-secrets
     usernameKey: NEXTCLOUD_ADMIN_USER
     passwordKey: NEXTCLOUD_ADMIN_PASSWORD
   trustedDomains:
-    - nextcloud.yanello.net
+    - nextcloudk8s.yanello.net
   extraEnv:
     - name: TRUSTED_PROXIES
       value: 10.10.8.0
     - name: OVERWRITEPROTOCOL
       value: https
     - name: OVERWRITEHOST
-      value: nextcloud.yanello.net
+      value: nextcloudk8s.yanello.net
     - name: OVERWRITECLIURL
-      value: https://nextcloud.yanello.net
+      value: https://nextcloudk8s.yanello.net
     - name: APACHE_DISABLE_REWRITE_IP
       value: '1'
   objectStore:
