immich version tagging

--- a/argocd/apps/immich/deploy.yaml
+++ b/argocd/apps/immich/deploy.yaml
@@ -49,7 +49,7 @@ spec:
                 name: immich-config
             - secretRef:
                 name: immich-secrets
-          image: ghcr.io/immich-app/immich-server:release@sha256:6606ce7740f7a06f7a53b49083100c6c05f75c84c85a87e9e4e7309ac0c5d454
+          image: ghcr.io/immich-app/immich-server:v1.127.0@sha256:6606ce7740f7a06f7a53b49083100c6c05f75c84c85a87e9e4e7309ac0c5d454
           ports:
             - containerPort: 2283
               protocol: TCP
@@ -108,7 +108,7 @@ spec:
                 name: immich-config
             - secretRef:
                 name: immich-secrets
-          image: ghcr.io/immich-app/immich-machine-learning:release-cuda@sha256:a1d7eb9bc5acd73e1de674e6655b934f9c89116eb76af41c41b65053ddcf4bff
+          image: ghcr.io/immich-app/immich-machine-learning:v1.127.0-cuda@sha256:5a4ebdb7ad0e1b6826a281db4e5422382cf9eb89f35612fa4906abf8cf36f3a1
           imagePullPolicy: IfNotPresent
           volumeMounts:
             - name: photos
