authentik scale down

--- a/argocd/apps/infra/authentik/manifests/values.yaml
+++ b/argocd/apps/infra/authentik/manifests/values.yaml
@@ -41,6 +41,7 @@ worker:
       memory: 500Mi
 redis:
   enabled: true
+  replicas: 0
   master:
     persistence:
       enabled: false
@@ -52,6 +53,7 @@ redis:
       enabled: false
 postgresql:
   enabled: true
+  replicas: 0
   primary:
     persistence:
       enabled: true
