--- a/argocd/apps/infra/authentik/kustomization.yaml
+++ b/argocd/apps/infra/authentik/kustomization.yaml
@@ -6,11 +6,25 @@ resources:
 
 generators:
   - ./manifests/secret-generator.yaml
-  
+
+patches:
+  - target:
+      kind: Deployment
+    patch: |-
+      - op: replace
+        path: /spec/replicas
+        value: 0
+  - target:
+      kind: StatefulSet
+    patch: |-
+      - op: replace
+        path: /spec/replicas
+        value: 0
+        
 helmCharts:
-    - name: authentik
-      namespace: authentik
-      releaseName: authentik
-      repo: https://charts.goauthentik.io/
-      version: "2025.2.0"
-      valuesFile: ./manifests/values.yaml
+  - name: authentik
+    namespace: authentik
+    releaseName: authentik
+    repo: https://charts.goauthentik.io/
+    version: "2025.2.0"
+    valuesFile: ./manifests/values.yaml
