--- a/argocd/apps/infra/monitoring/values.yaml
+++ b/argocd/apps/infra/monitoring/values.yaml
@@ -1,3 +1,9 @@
 defaultDashboards:
   annotations:
     argocd.argoproj.io/sync-options: ServerSideApply=true
+    
+grafana:
+  admin:
+    existingSecret: grafana-secrets
+    userKey: grafana-admin-user
+    passwordKey: grafana-admin-password
