vmagent scrape config2

--- a/argocd/apps/infra/monitoring/manifests/vmagent-secrets.yaml
+++ b/argocd/apps/infra/monitoring/manifests/vmagent-secrets.yaml
@@ -5,8 +5,8 @@ metadata:
     labels:
         app.kubernetes.io/part-of: monitoring
 type: Opaque
-stringData: null
-token: ENC[AES256_GCM,data:YEOWNQ09TIMnDgROqq/eK4YTcVvIpYZnzYLL+O5EWVWw6HKaDRgbZdEm8mnKsYyMLjkZ7W8ZCAQX1SjgxLi1oPORui9PrNZ/jWGmOYmIust9r+gV02RF8E9sGKCpZLUtKlvHmf4GoPGotugBP+1M2nDjyvcUHOyrIZ2849Ahz4CNdTONRM1k0Cx2mw7h519bjdb4Ll+4B5Sm1T0ItZ9bc9v3A5aLTpsGiZLrFkoQpdJ1Alad/qh/,iv:xksnWxbWSKMPJ1eOVZmNQQUZ+Vz7c6NQgunNhcC+A9M=,tag:wtRb560mghaozYK4iXCvAQ==,type:str]
+stringData:
+    token: ENC[AES256_GCM,data:rnGXR7JTJzfkDKdQQkxYCW3FZw1fzKm31OpR5u++9DMjtnNRQ12L9Ky6O1ci6vrTWfrs+FNdlFE+Mt3IXG1AG+O+TxDOOuLfR1OllZ5oIHy1JimfOnJRwb3quovRwIciV8n8hwJb4TzWsleZvRXBNLjRzxK0znyp0eIBf7hBhRjUEAsW5hHmHG7xCZfXS8CEMxQjLmjTRbWUg8lomNlud+/B3Y//hxF77+JE6k5/8sH/x9j4XRsn,iv:TKVuCezrAyAdMfGtAADlksTXCdwmGMbuYB/olhLR0+0=,tag:ttt7uS+Gw1N28wd8tFueoQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-27T03:46:16Z"
-    mac: ENC[AES256_GCM,data:Nn2FzWcgE4DnsSyoPdUTR9UEDaCiKsbiNH2POIlAno9NjKTRqDlSyMx3+5yT/+IGNh3sra+2mR1aqZD6xJohd8Jy1P2rS4Mh7mG3Jekk8gFQxB+2CCbC0VSQzm6BSJQK+PCQAV5JdZhu5ItK8av3Xqg2qg+PtCg1SdQBNf/ESoc=,iv:im/XaV7RX5uKB/Gxe+drqkCw+SbeoFBHcK4Vih28AI8=,tag:r7AB6a4qqV49EVwmsP7TbQ==,type:str]
+    lastmodified: "2025-02-27T03:51:38Z"
+    mac: ENC[AES256_GCM,data:TQddPUtwHadA6UV02YyF0GTBizivJVgxgxzXJiT6LZGXfkCEiizp4nnP9T12MuSnJ5B+I8FxwNMbgZgobUfuBSIHqP6XP2lbSAm8iE7V6DVJdvzO3PlYlNWHe3H4ZmohmGNeh+KgB2hERLnbX6EouTS1VhZrYcp6iQUFoHr2/2g=,iv:Nu7ZnKil2aRBl6qNWTSEksBDhx6Tls88tUQ/O6B6abQ=,tag:Lc/hq7WzDQS/EDA+rqqHyw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.4
