--- a/argocd/apps/paperless/kustomization.yaml
+++ b/argocd/apps/paperless/kustomization.yaml
@@ -4,6 +4,14 @@ kind: Kustomization
 generators:
 - ./secret-generator.yaml
 
+patches:
+- target:
+    kind: Deployment
+  patch: |-
+    - op: replace
+      path: /spec/replicas
+      value: 0
+
 resources:
 - cm.yaml
 - deploy.yaml
