--- a/argocd/apps/nextcloud/kustomization.yaml
+++ b/argocd/apps/nextcloud/kustomization.yaml
@@ -4,6 +4,14 @@ kind: Kustomization
 resources:
   - ./manifests/vs.yaml
   - ./manifests/cm.yaml
+  
+patches:
+- target:
+    kind: Deployment
+  patch: |-
+    - op: replace
+      path: /spec/replicas
+      value: 0
 
 generators:
   - ./manifests/secret-generator.yaml
