--- a/argocd/apps/nextcloud/kustomization.yaml
+++ b/argocd/apps/nextcloud/kustomization.yaml
@@ -12,7 +12,13 @@ patches:
     - op: replace
       path: /spec/replicas
       value: 0
-
+- target:
+    kind: Deployment
+  patch: |-
+    - op: replace
+      path: /spec/replicas
+      value: 0
+      
 generators:
   - ./manifests/secret-generator.yaml
 
