--- a/argocd/apps/nextcloud/kustomization.yaml
+++ b/argocd/apps/nextcloud/kustomization.yaml
@@ -13,7 +13,7 @@ patches:
       path: /spec/replicas
       value: 0
 - target:
-    kind: Deployment
+    kind: StatefulSet
   patch: |-
     - op: replace
       path: /spec/replicas
