--- a/argocd/apps/media-server/ombi/deploy.yaml
+++ b/argocd/apps/media-server/ombi/deploy.yaml
@@ -37,7 +37,7 @@ spec:
               value: "1000"
             - name: TZ
               value: America/Chicago
-          image: linuxserver/ombi:latest@sha256:7eec3a34bcc93930144acde80d0009cabf4bb9e15045feac8d74626dc87dae8e
+          image: linuxserver/ombi:v4.47.1-ls214@sha256:086e7347260fc6f1847a202727782a371d110a80e03b4436f68b06fb4d7e3bf1
           imagePullPolicy: IfNotPresent
           name: ombi
           resources:
