--- a/argocd/apps/media-server/qbittorrent/manifests/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/manifests/deploy.yaml
@@ -38,7 +38,7 @@ spec:
             value: "1000"
           - name: DOCKER_MODS
             value: "ghcr.io/vuetorrent/vuetorrent-lsio-mod:latest"
-        image: lscr.io/linuxserver/qbittorrent:latest@sha256:f8d719940b59472f9a29f1de799a3fa180e051ad5d29c50052ae9129b09bfd9c
+        image: lscr.io/linuxserver/qbittorrent:5.0.4-r0-ls383@sha256:81a71641d2ee65fbecfabf3388f0d6b7b053e7266658b1fb7efee8900d06f010
         imagePullPolicy: IfNotPresent
         resources:
           requests:
