--- a/argocd/apps/ihatemoney/manifests/sts.yaml
+++ b/argocd/apps/ihatemoney/manifests/sts.yaml
@@ -18,7 +18,7 @@ spec:
   template:
     metadata:
       labels:
-        server: ihatemoney
+        app: ihatemoney
     spec:
       containers:
         - name: ihatemoney
