--- a/argocd/apps/ihatemoney/manifests/sts.yaml
+++ b/argocd/apps/ihatemoney/manifests/sts.yaml
@@ -14,7 +14,7 @@ spec:
       partition: 0
   selector:
     matchLabels:
-      server: ihatemoney
+      app: ihatemoney
   template:
     metadata:
       labels:
