--- a/argocd/apps/ihatemoney/manifests/secret-generator.yaml
+++ b/argocd/apps/ihatemoney/manifests/secret-generator.yaml
@@ -7,4 +7,5 @@ metadata:
         exec:
           path: ksops
 files:
-  - ./manifests/secrets.yaml
+  - ./manifests/ihm-secrets.yaml
+  - ./manifests/image-pull-secrets.yaml
