--- a/argocd/apps/paperless/kustomization.yaml
+++ b/argocd/apps/paperless/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 generators:
-- ./secret-generator.yaml
+- ./manifests/secret-generator.yaml
 
 patches:
 - target:
@@ -13,8 +13,8 @@ patches:
       value: 1
 
 resources:
-- cm.yaml
-- deploy.yaml
-- pvc.yaml
-- service.yaml
-- vs.yaml
+- manifests/cm.yaml
+- manifests/deploy.yaml
+- manifests/pvc.yaml
+- manifests/service.yaml
+- manifests/vs.yaml
