--- a/argocd/apps/paperless/manifests/deploy.yaml
+++ b/argocd/apps/paperless/manifests/deploy.yaml
@@ -21,7 +21,7 @@ spec:
         app: paperless
     spec:
       containers:
-        - image: ghcr.io/paperless-ngx/paperless-ngx:latest@sha256:2a6d9f6461ad7e8335f5b2123a173b9e6002fda209af8a66483b0c00629569ab
+        - image: ghcr.io/paperless-ngx/paperless-ngx:2.14.7@sha256:2a6d9f6461ad7e8335f5b2123a173b9e6002fda209af8a66483b0c00629569ab
           imagePullPolicy: IfNotPresent
           name: paperless
           ports:
