--- a/argocd/apps/paperless/manifests/secret-generator.yaml
+++ b/argocd/apps/paperless/manifests/secret-generator.yaml
@@ -1,7 +1,6 @@
 apiVersion: viaduct.ai/v1
 kind: ksops
 metadata:
-  # Specify a name
   name: paperless-secret-generator
   annotations:
     config.kubernetes.io/function: |
@@ -9,4 +8,5 @@ metadata:
           path: ksops
 
 files:
-  - manifests/paperless-secrets.enc.yaml
+  - manifests/paperless-secrets.yaml
+  - manifests/paperless-ai-secrets.yaml
