fix paperless port3

--- a/argocd/apps/paperless/manifests/paperless-ai-secrets.yaml
+++ b/argocd/apps/paperless/manifests/paperless-ai-secrets.yaml
@@ -1,12 +1,11 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: paperless-secrets
+    name: paperless-ai-secrets
 type: Opaque
 stringData:
-    PAPERLESS_SECRET_KEY: ENC[AES256_GCM,data:xNm3XwQ8jHpdSRdnf/p8NaquurxsoNbRJptZ1QGWY9Sn/A+yt5upIg==,iv:x0boH9XCaUH2NjPV2x+LQ29XxkVcyDzpo99FsYRiFmc=,tag:SJ75d7R2p3UJhBvkLoAbGw==,type:str]
-    MARIADB_PASSWORD: ENC[AES256_GCM,data:Z+wIpryUk0oeVjAyOLKNnFfe+zVG7CBDc3DY7BLZQEOHW5oGTnnseg==,iv:XOrOiUVDGEO1Q1tBkWbnV93w9LUHm/88cMCEEkWUPCk=,tag:tn4yeUl4SYsZ6H3SVkFtsg==,type:str]
-    MARIADB_ROOT_PASSWORD: ENC[AES256_GCM,data:e57b/mVxTkvTfEjatK2ZcBIT4CdKFRAVlKSakr1ZblUvbCW6ZYtAuQ==,iv:PcBAlJS3vuqBlOdmhDpvUJ27e9jL/RwFXjbldpuQVRQ=,tag:TO6AUiCOGvE7P0BpnSu2sA==,type:str]
+    PAPERLESS_API_URL: ENC[AES256_GCM,data:yU37Ml06HD4yT/B4JAr2TTWG91fMMHIk,iv:mPwqHBscfv+p5yLLKdMu8cMxc4ox9ft/GEBUKnYveZA=,tag:8IdVhJnnZmBoiBlFq20g4w==,type:str]
+    PAPERLESS_API_TOKEN: ENC[AES256_GCM,data:0hZV,iv:cC2HO3r86yB6j1YXNKMLRXrZsjhTN7Z74XKgnkY50bU=,tag:AMTLI3gTWpU0bC3ktcDBog==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +21,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-02-09T17:25:51Z"
-    mac: ENC[AES256_GCM,data:ecuNoJ5szooVYdLI3uScRvGnx05OzD/k6/iqqvAQ/abpmOGz9MlNlM9MWTewk+iurfTD6nmxmdDGU77PsedNIMrkFQN/D3n3YZuE/3WqaSFDTDwvRTGlAFFIZNd8CdZ2Gtw8F7om8wmy57+7arfP5RYLDqAwF35hJD1Jq77v4r4=,iv:NsGqbjzUFLhgEzIrfudTxUJDZU8tKgVGshOQ6Pedlfs=,tag:g5z3fPF4j8CTz5G2H78oMg==,type:str]
+    lastmodified: "2025-03-04T03:04:18Z"
+    mac: ENC[AES256_GCM,data:fwJdUdCbnFFbxJB+44aYhML231epo7z7hRgsJxLSHUz6k9IVxCT300W0POPyQ51COn3yJLzZ8w/FgPf7lSljRMyyoQvRA9o8jOUcOTZhD4HL3HANlrIWqqyw3JKq9kOPIAU/lpdcIhJUu0QMBohvsJr67VcmbVbLxOVDuIafKPQ=,iv:30kRecKi7gfZwgN7arQCD5+6MU7Mq2v2N58iOM7klXM=,tag:vnaHc77kmy0lWD+eugVadA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
-    version: 3.9.1
+    version: 3.9.4
