--- a/argocd/apps/homarr/kustomization.yaml
+++ b/argocd/apps/homarr/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 
 resources:
   - ./manifests/vs.yaml
-
+  - ./manifests/http-route.yaml
 generators:
   - ./manifests/secret-generator.yaml
 
