--- a/argocd/apps/infra/storage/longhorn/kustomization.yaml
+++ b/argocd/apps/infra/storage/longhorn/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 
 resources:
   - ./manifests/vs.yaml
-
+  - ./manifests/http-route.yaml
 generators:
   - ./manifests/secret-generator.yaml
 
