--- a/argocd/apps/infra/kiali/kustomization.yaml
+++ b/argocd/apps/infra/kiali/kustomization.yaml
@@ -1,9 +1,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-#resources:
- # - vs.yaml
-
+resources:
+ - vs.yaml
+ - http-route.yaml
+ 
 helmCharts:
   - name: kiali-operator
     repo: https://kiali.org/helm-charts
