--- a/argocd/apps/media-server/qbittorrent/kustomization.yaml
+++ b/argocd/apps/media-server/qbittorrent/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - manifests/service.yaml
   - manifests/pvc.yaml
   - manifests/net-policy.yaml
-
+  - manifests/http-route.yaml
 generators:
   - manifests/secret-generator.yaml
 
