--- a/argocd/apps/owntracks/kustomization.yaml
+++ b/argocd/apps/owntracks/kustomization.yaml
@@ -2,10 +2,10 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-- deploy.yaml
-- vs.yaml
-- service.yaml
-- pvc.yaml
-
+- ./manifests/deploy.yaml
+- ./manifests/vs.yaml
+- ./manifests/service.yaml
+- ./manifests/pvc.yaml
+- ./manifests/http-route.yaml
 generators:
-- secret-generator.yaml
+- ./manifests/secret-generator.yaml
