--- a/argocd/apps/infra/gitea/manifests/values.yaml
+++ b/argocd/apps/infra/gitea/manifests/values.yaml
@@ -15,7 +15,12 @@ actions:
 # 
 metrics:
   enabled: true
-  
+
+redis-cluster:
+  enabled: false
+redis:
+  enabled: true  
+
 postgresql-ha:
   enabled: false
   
