--- a/argocd/apps/media-server/radarr/http-route.yaml
+++ b/argocd/apps/media-server/radarr/http-route.yaml
@@ -8,6 +8,10 @@ metadata:
   name: radarr-httproute
   namespace: radarr
 spec:
+  parentRefs:
+  - name: gateway-api
+    namespace: istio-system
+    sectionName: https
   hostnames:
   - radarr.yanello.net
   rules:
